<resources>
    <string name="app_name">Aye-IdeaCanvas</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="storyboard_title">StoryBoard Title</string>
    <string name="body_text_optional">body text (optional)</string>
    <string name="storyboard_image">Storyboard Image</string>
    <string name="add_music">Add music</string>
    <string name="frame">Frame</string>
    <string name="visibility">Visibility</string>
    <string name="private_button">Private</string>
    <string name="unlisted_button">Unlisted</string>
    <string name="everyone_button">Everyone</string>
    <string name="genre_one">Genre 1</string>
    <string name="genre_two">Genre 2 (optional)</string>
    <string name="series_title">Series Title</string>
    <string name="tags">Tags</string>
    <string name="mature_rated">Mature-Rated?</string>
    <string name="character_limit_50">Less than 50 characters</string>
    <string name="link">Link</string>
    <string name="create_storyboard">Create StoryBoard</string>
    <string name="link_to_work">Link to work</string>
    <string name="enter_link">Enter a link to your work</string>
    <string name="enter_tags">Enter tags</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts">Posts</string>
    <string name="qualifications">Qualifications</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="activity">Activity</string>
    <string name="messages">Messages</string>
</resources>