<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_gray"
    tools:context=".create.CreateDetailsFragment">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/visibility"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/visibilityToggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:background="@color/white"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visibility"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/privateButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/private_button"
            android:textSize="16sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/unlistedButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unlisted_button"
            android:textSize="16sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/everyoneButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/everyone_button"
            android:textSize="16sp"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/genreOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/genre_one"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visibilityToggleGroup" />

    <TextView
        android:id="@+id/genreTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/genre_two"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/genreTwoSpinner"
        app:layout_constraintTop_toBottomOf="@id/visibilityToggleGroup" />

    <Spinner
        android:id="@+id/genreOneSpinner"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginVertical="16dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/genreOne"
        app:layout_constraintTop_toBottomOf="@id/genreOne"/>

    <Spinner
        android:id="@+id/genreTwoSpinner"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genreTwo"/>

    <TextView
        android:id="@+id/seriesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/series_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genreTwoSpinner" />

    <EditText
        android:id="@+id/seriesTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="text"
        android:inputType="text"
        android:hint="@string/character_limit_50"
        android:textSize="16sp"
        android:maxLines="1"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/seriesTitle"
        app:layout_constraintTop_toBottomOf="@id/seriesTitle" />

    <TextView
        android:id="@+id/tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tags"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seriesTitleEditText" />

    <EditText
        android:id="@+id/tagsEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="text"
        android:inputType="text"
        android:textSize="16sp"
        android:maxLines="1"
        android:background="@color/white"
        android:hint="@string/enter_tags"
        app:layout_constraintStart_toStartOf="@id/tags"
        app:layout_constraintTop_toBottomOf="@id/tags" />

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/link"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagsEditText" />

    <EditText
        android:id="@+id/linkEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="text"
        android:inputType="text"
        android:textSize="16sp"
        android:hint="@string/enter_link"
        android:maxLines="1"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/link"
        app:layout_constraintTop_toBottomOf="@id/link" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/matureRated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:layout_margin="16dp"
        android:text="@string/mature_rated"
        android:textSize="20sp"
        android:textStyle="bold"
        app:trackTint="@color/light_purple"
        app:thumbTint="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linkEditText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/create_storyboard"
        android:layout_margin="32dp"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>